{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 95,
  "lineage": "7a322b3a-9e41-740d-b015-a17a3198e550",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "natPublicWebProd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913989741446:internet-gateway/igw-07a6ac6ffad019850",
            "id": "igw-07a6ac6ffad019850",
            "owner_id": "913989741446",
            "tags": {
              "Name": "natPublicWebProd",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "natPublicWebProd",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0d08ae9848d359e27"
          },
          "dependencies": [
            "aws_vpc.WebProd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRTwebProd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913989741446:route-table/rtb-045e77f6401e6e799",
            "id": "rtb-045e77f6401e6e799",
            "owner_id": "913989741446",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privateRTprod",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "privateRTprod",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0d08ae9848d359e27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.WebProd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRTwebProd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913989741446:route-table/rtb-006e0038384f0f2f2",
            "id": "rtb-006e0038384f0f2f2",
            "owner_id": "913989741446",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a6ac6ffad019850",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRTprod"
            },
            "tags_all": {
              "Name": "publicRTprod"
            },
            "vpc_id": "vpc-0d08ae9848d359e27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.natPublicWebProd",
            "aws_vpc.WebProd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913989741446:security-group/sg-09c541615cf50f0b2",
            "description": "Local rules for private subnet",
            "egress": [],
            "id": "sg-09c541615cf50f0b2",
            "ingress": [],
            "name": "privateSubnet",
            "name_prefix": "",
            "owner_id": "913989741446",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d08ae9848d359e27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.WebProd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913989741446:security-group/sg-0e02364098290fd3d",
            "description": "Rules for public subnet",
            "egress": [],
            "id": "sg-0e02364098290fd3d",
            "ingress": [],
            "name": "publicSubnet",
            "name_prefix": "",
            "owner_id": "913989741446",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d08ae9848d359e27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.WebProd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateWebProd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913989741446:subnet/subnet-084225e28fb7e4eb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-084225e28fb7e4eb9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913989741446",
            "tags": {
              "Name": "privateWebProd",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "privateWebProd",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0d08ae9848d359e27"
          },
          "dependencies": [
            "aws_vpc.WebProd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubWebProd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913989741446:subnet/subnet-04b262f1852f3bd66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04b262f1852f3bd66",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "913989741446",
            "tags": {
              "Name": "pubWebProd",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "pubWebProd",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0d08ae9848d359e27"
          },
          "dependencies": [
            "aws_vpc.WebProd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "WebProd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913989741446:vpc/vpc-0d08ae9848d359e27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bcabb0971b6e2697",
            "default_route_table_id": "rtb-06f0fa29478503a6d",
            "default_security_group_id": "sg-04c86229c3d84ea9d",
            "dhcp_options_id": "dopt-024b708afc539e390",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d08ae9848d359e27",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06f0fa29478503a6d",
            "owner_id": "913989741446",
            "tags": {
              "Name": "WebProd",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "WebProd",
              "Terraform": "True"
            }
          }
        }
      ]
    }
  ]
}